Made Header independet to each page, Created LoggedInHeader, Fixed Logo Alignment.

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,15 +5,25 @@
   
   .header .container {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
   }
   
   .header .logo {
     font-size: 24px;
     color: #15DB63; /* Primary accent color */
     text-decoration: none;
+    margin-top: 20px;
   }
+  
+  .header .search-bar{
+    width: 300px;
+    padding: 10px 20px; 
+    font-size: 14px; 
+    border: 1px solid #040404; 
+    border-radius: 4px;
+  }
+
   
   .header nav a {
     color: #040404; /* Dark text color */
